Prevent horizontal scroll on mobile devices

--- a/css/new.css
+++ b/css/new.css
@@ -7,6 +7,7 @@ html {
     margin-right: auto;
     width: 1000px;
     justify-content: center;
+    overflow-x: hidden; /* prevent horizontal scroll */
 }
 
 /* Header content layout */
@@ -134,6 +135,7 @@ img, a {
         margin-right: auto;
         width: 768px;
         justify-content: center;
+        overflow-x: hidden;
     }
 
     .flex-container {
@@ -166,7 +168,7 @@ img, a {
     }
 
     .figure-border {
-        width: 758px;
+        width: 750px; /* Adjust width to prevent horizontal scroll on ipads */
         /* border: solid #f0f0f0 2px; */
         display: flex;
         flex-wrap: wrap;
@@ -197,6 +199,7 @@ img, a {
         margin-right: auto;
         width: 360px;
         justify-content: center;
+        overflow-x: hidden; /* Prevent horintal scroll */
     }
 
     .flex-container {
@@ -251,7 +254,7 @@ img, a {
     }
 
     .figure-border {
-        width: 358px;
+        width: 350px; /* adjust width to prevent horizontal scroll on mobile devices */
         /* border: solid #f0f0f0 2px; */
         display: flex;
         flex-wrap: wrap;
